--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -26,7 +26,7 @@
   height: 1.625rem;
 }
 
-.closeButton:hover,
+/* .closeButton:hover, */
 .closeButton:active {
   color: white;
   background-color: rgba(255 0 0 / 0.5);
@@ -97,7 +97,7 @@
   padding: 0.375rem 0.5rem;
 }
 
-.modalCancelButton:hover,
+/* .modalCancelButton:hover, */
 .modalCancelButton:active {
   background-color: red;
   outline: none;
@@ -111,7 +111,7 @@
   padding: 0.375rem 0.5rem;
 }
 
-.modalSaveButton:hover,
+/* .modalSaveButton:hover, */
 .modalSaveButton:active {
   background-color: green;
   outline: none;
