--- a/src/components/AttendanceForm/AttendanceForm.module.css
+++ b/src/components/AttendanceForm/AttendanceForm.module.css
@@ -20,6 +20,7 @@
   outline: none;
 }
 
+.wrapper input:hover,
 .wrapper input:focus {
   outline: solid 0.1rem deeppink;
 }
@@ -36,7 +37,7 @@
   transition: 200ms;
 }
 
-/* .wrapper button:hover, */
+.wrapper button:hover,
 .wrapper button:active {
   background-color: hotpink;
 }
